--- a/labs/W0D6_2P_Analysis/W0D6_2P_Analysis.ipynb
+++ b/labs/W0D6_2P_Analysis/W0D6_2P_Analysis.ipynb
@@ -1,51 +1,61 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "W0D6_2P_Analysis.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyMj7ZXgKRyX+q9aKG3iq6BB",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "view-in-github"
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/pavolbauer/lindoscope-2021/blob/main/labs/W0D6_2P_Analysis/W0D6_2P_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/pavolbauer/lindoscope-2021/blob/main/labs/W0D6_2P_Analysis/W0D6_2P_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zQ_rQ0qSrYbO"
-      },
-      "source": [
-        "import numpy as np"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9g2Bd2Rqro2A"
-      },
-      "source": [
-        "Welcome to the 2P analysis lab!\n"
-      ]
-    }
-  ]
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "zQ_rQ0qSrYbO"
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "9g2Bd2Rqro2A"
+   },
+   "source": [
+    "Welcome to the 2P analysis lab!\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyMj7ZXgKRyX+q9aKG3iq6BB",
+   "include_colab_link": true,
+   "name": "W0D6_2P_Analysis.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
