DLC and VAME labs tested under linux

--- a/labs/W1D3_Behavior_Analysis/W1D03_Behavior_Analysis.ipynb
+++ b/labs/W1D3_Behavior_Analysis/W1D03_Behavior_Analysis.ipynb
@@ -22,11 +22,11 @@
    "source": [
     "# import of necessary functions\n",
     "import sys\n",
-    "sys.path.append(\"C:\\\\Research\\\\vame_alpha\\\\VAME\\\\\")\n",
+    "sys.path.append(\"/home/pbauer/GIT/VAME\")\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from display_video import play_motif_video\n",
+    "#from display_video import play_motif_video\n",
     "\n",
     "import vame"
    ]
@@ -41,16 +41,18 @@
     "project = \"Lindoscope-VAME\"\n",
     "\n",
     "# set working directory\n",
-    "working_directory = \"C:\\\\Research\\\\Lindoscope\\\\\"\n",
+    "working_directory = \"/home/pbauer/VAME\"\n",
     "\n",
     "# specifying path to example video\n",
-    "videos = ['C:\\\\Research\\\\Lindoscope\\\\video-1.mp4']"
+    "videos = ['/home/pbauer/DATA/video-1.mp4']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Step 1: Initialize your project\n",
@@ -64,7 +66,7 @@
    "outputs": [],
    "source": [
     "# reinitialize config\n",
-    "config = \"C:\\\\Research\\\\Lindoscope\\\\Lindoscope-VAME-Aug18-2021\\\\config.yaml\""
+    "config = \"/home/pbauer/VAME/Lindoscope-VAME-Aug31-2021/config.yaml\""
    ]
   },
   {
@@ -103,7 +105,7 @@
    "outputs": [],
    "source": [
     "# load data\n",
-    "path_to_trajectory = \"C:\\\\Research\\\\Lindoscope\\\\Lindoscope-VAME-Aug18-2021\\\\data\\\\video-1\\\\video-1-PE-seq.npy\"\n",
+    "path_to_trajectory = \"/home/pbauer/VAME/Lindoscope-VAME-Aug31-2021/data/video-1/video-1-PE-seq.npy\"\n",
     "trajectory = np.load(path_to_trajectory)\n",
     "\n",
     "# set plotting configuration\n",
@@ -145,7 +147,7 @@
    },
    "outputs": [],
    "source": [
-    "vame.train_model(config, softbool=False)"
+    "vame.train_model(config)"
    ]
   },
   {
@@ -184,7 +186,7 @@
    "outputs": [],
    "source": [
     "# Segment motifs\n",
-    "vame.pose_segmentation(config, parameterization=\"kmeans\")"
+    "vame.pose_segmentation(config)"
    ]
   },
   {
@@ -203,7 +205,7 @@
     "# Use the generative model (reconstruction decoder) to sample from \n",
     "# the learned data distribution or reconstruct random real samples \n",
     "#options: mode: \"reconstruction\", \"sampling\"\n",
-    "vame.generative_model(config, mode=\"sampling\", parameterization=\"kmeans\") \n"
+    "vame.generative_model(config, mode=\"sampling\") \n"
    ]
   },
   {
@@ -219,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vame.motif_videos(config, param='kmeans', videoType='.mp4')"
+    "vame.motif_videos(config, videoType='.mp4')"
    ]
   },
   {
@@ -238,7 +240,7 @@
    "outputs": [],
    "source": [
     "# The function will open a window which contains the video\n",
-    "play_motif_video(config, motif=5, parameterization=\"kmeans\")"
+    "play_motif_video(config, motif=1)"
    ]
   },
   {
@@ -247,6 +249,15 @@
    "source": [
     "## Part 3: Analysis\n",
     "The next part will teach you on how to analys the motif data and to identify structure in the data. Especially, we will look at the motif distribution, create communities (groups of motifs) and also investigate their transition probabilities. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append(\"/home/pbauer/GIT/lindoscope-2021/src/W1D3_Behavior_Analysis\")"
    ]
   },
   {
@@ -265,9 +276,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# display the distribution of behavioral motifs\n",
-    "behavior_distribution(config)"
+    "behavior_distribution(config,param='kmeans')"
    ]
   },
   {
@@ -328,7 +346,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import umap"
+   ]
   }
  ],
  "metadata": {
