--- a/labs/W1D3_Behavior_Analysis/W1D03_DeepLabCut_behaviorAnalysis.ipynb
+++ b/labs/W1D3_Behavior_Analysis/W1D03_DeepLabCut_behaviorAnalysis.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "extraordinary-rwanda",
    "metadata": {},
    "source": [
     "# **Behavior Analysis using DeepLabCut:**\n",
@@ -24,8 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "meaning-trust",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +35,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "difficult-objective",
    "metadata": {},
    "source": [
     "## 1. Create a new project :\n",
@@ -46,34 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "democratic-illustration",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created \"C:\\Users\\compraka\\Research\\LINdoscope\\analysis\\lindoscope_analysis-LINdoscope-2021-08-30\\videos\"\n",
-      "Created \"C:\\Users\\compraka\\Research\\LINdoscope\\analysis\\lindoscope_analysis-LINdoscope-2021-08-30\\labeled-data\"\n",
-      "Created \"C:\\Users\\compraka\\Research\\LINdoscope\\analysis\\lindoscope_analysis-LINdoscope-2021-08-30\\training-datasets\"\n",
-      "Created \"C:\\Users\\compraka\\Research\\LINdoscope\\analysis\\lindoscope_analysis-LINdoscope-2021-08-30\\dlc-models\"\n",
-      "Copying the videos\n",
-      "C:\\Users\\compraka\\Research\\LINdoscope\\analysis\\lindoscope_analysis-LINdoscope-2021-08-30\\videos\\vame_freelymoving_mouse_bottomcam.mp4\n",
-      "Generated \"C:\\Users\\compraka\\Research\\LINdoscope\\analysis\\lindoscope_analysis-LINdoscope-2021-08-30\\config.yaml\"\n",
-      "\n",
-      "A new project with name lindoscope_analysis-LINdoscope-2021-08-30 is created at C:\\Users\\compraka\\Research\\LINdoscope\\analysis and a configurable file (config.yaml) is stored there. Change the parameters in this file to adapt to your project's needs.\n",
-      " Once you have changed the configuration file, use the function 'extract_frames' to select frames for labeling.\n",
-      ". [OPTIONAL] Use the function 'add_new_videos' to add new videos to your project (at any stage).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "task='lindoscope_analysis' # Enter the name of your experiment Task\n",
     "experimenter='LINdoscope' # Enter the name of the experimenter\n",
-    "working_directory= r'C:\\Users\\compraka\\Research\\LINdoscope\\analysis' # Enter the path to the working directory where you want to\n",
+    "working_directory= '/home/pbauer/DLC' # Enter the path to the working directory where you want to\n",
     "                                                                     # create the project\n",
-    "videos=[r'C:\\Users\\compraka\\Research\\LINdoscope\\videos\\vame_freelymoving_mouse_bottomcam.mp4'] # Enter the paths of your videos \n",
+    "videos=['/home/pbauer/DATA/video-1.mp4'] # Enter the paths of your videos \n",
     "                                                                                               # where you want to grab frames from\n",
     "\n",
     "path_config_file=deeplabcut.create_new_project(task,experimenter,videos,working_directory,copy_videos=True, videotype=\".mp4\", multianimal=False) \n",
@@ -82,8 +60,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_config_file='/home/pbauer/DLC/lindoscope_analysis-LINdoscope-2021-08-30/config.yaml'"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "accessory-bottle",
    "metadata": {},
    "source": [
     "## Edit the config.yaml files\n",
@@ -98,7 +84,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floating-check",
    "metadata": {},
    "source": [
     "## 2. Extract frames from the video :\n",
@@ -108,66 +93,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "touched-enclosure",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Config file read successfully.\n",
-      "Do you want to extract (perhaps additional) frames for video: C:\\Users\\compraka\\Research\\LINdoscope\\analysis\\lindoscope_analysis-LINdoscope-2021-08-30\\videos\\vame_freelymoving_mouse_bottomcam.mp4 ?\n",
-      "yes/noyes\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1it [00:00,  5.31it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting frames based on kmeans ...\n",
-      "Kmeans-quantization based extracting of frames from 0.0  seconds to 1784.44  seconds.\n",
-      "Extracting and downsampling... 44611  frames from the video.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "44611it [09:39, 76.97it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kmeans clustering ... (this might take a while)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\compraka\\Anaconda3\\envs\\DLC-GPU\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:888: UserWarning: MiniBatchKMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can prevent it by setting batch_size >= 10240 or by setting the environment variable OMP_NUM_THREADS=1\n",
-      "  f\"MiniBatchKMeans is known to have a memory leak on \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frames were successfully extracted, for the videos of interest.\n",
-      "\n",
-      "You can now label the frames using the function 'label_frames' (if you extracted enough frames for all videos).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -179,7 +106,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "secure-playlist",
    "metadata": {},
    "source": [
     "## 3. Labelling the frames :\n",
@@ -189,7 +115,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continuous-accident",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +130,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fitted-workplace",
    "metadata": {},
    "source": [
     "## 4. Creating a training dataset :\n",
@@ -215,7 +139,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corresponding-dependence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +147,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "visible-australia",
    "metadata": {},
    "source": [
     "## 5. Start training :"
@@ -233,7 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "optimum-deposit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +163,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liberal-auckland",
    "metadata": {},
    "source": [
     "## 6. Evaluate the network :\n",
@@ -252,7 +172,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "copyrighted-organization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +180,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "previous-context",
    "metadata": {},
    "source": [
     "## 7. Analyze your videos :\n",
@@ -271,7 +189,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "destroyed-lincoln",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +200,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supposed-december",
    "metadata": {},
    "source": [
     "## 7a. Extract outlier frames :\n",
@@ -294,7 +210,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "young-journalist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +219,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "solar-saturday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "statistical-filing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +242,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "simplified-hardwood",
    "metadata": {},
    "source": [
     "## 8. Creating labeled videos :\n",
@@ -339,7 +251,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hungry-retail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
