--- a/labs/W0D6_2P_Analysis/W0D6_2P_Analysis.ipynb
+++ b/labs/W0D6_2P_Analysis/W0D6_2P_Analysis.ipynb
@@ -2362,7 +2362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2376,7 +2376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
