motion correction comparison added

--- a/labs/W0D6_2P_Analysis/W0D6_2P_CaIMan.ipynb
+++ b/labs/W0D6_2P_Analysis/W0D6_2P_CaIMan.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "source": [
     "### Select file(s) to be processed\n",
-    "The `download_demo` function will download the specific file for you and return the complete path to the file which will be stored in your `caiman_data` directory. If you adapt this demo for your data make sure to pass the complete path to your file(s). Remember to pass the `fname` variable as a list."
+    "Copy the files from your students directory on the linstore folder and adjust the \"fnames\" variable below accordingly."
    ]
   },
   {
@@ -86,7 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fnames = ['/home/pbauer/DATA/LotusScan/20210819_EM0043_1.tiff']  # filename to be processed\n",
+    "#fnames = ['/home/pbauer/DATA/LotusScan/20210819_EM0043_1.tiff']  # filename to be processed\n",
+    "fnames = ['/home/pbauer/DATA/LotusScan/Exported Images ch1 tiff_stack fiji.tiff']\n",
     "#if fnames[0] in ['Sue_2x_3000_40_-46.tif', 'demoMovie.tif']:\n",
     "#    fnames = [download_demo(fnames[0])]"
    ]
@@ -193,13 +194,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bonus task! \n",
+    "\n",
+    "When done with the notebook, come back to this point and perform perform rigid motion correction by setting the parameter \"pw_rigid\" to \"False\" and run the rest of the code again!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# dataset dependent parameters\n",
-    "fr = 15                             # imaging rate in frames per second\n",
+    "fr = 20                             # imaging rate in frames per second\n",
     "decay_time = 0.4                    # length of a typical transient in seconds\n",
     "\n",
     "# motion correction parameters\n",
@@ -330,6 +340,29 @@
     "m_els = cm.load(mc.fname_tot_els)\n",
     "border_to_0 = 0 if mc.border_nan is 'copy' else mc.border_to_0 \n",
     "    # maximum shift to be used for trimming against NaNs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plot shifts from motion correction\n",
+    "if pw_rigid==False:\n",
+    "    plt.plot(mc.shifts_rig)\n",
+    "    plt.legend(['x_shifts','y_shifts'])\n",
+    "    plt.xlabel('frames')\n",
+    "    plt.ylabel('pixels')    \n",
+    "else:\n",
+    "    plt.subplot(2,1,1)    \n",
+    "    plt.plot(mc.x_shifts_els)    \n",
+    "    plt.ylabel('x pixels')   \n",
+    "    plt.subplot(2,1,2)\n",
+    "    plt.plot(mc.y_shifts_els)\n",
+    "    plt.ylabel('y pixels')   \n",
+    "    plt.xlabel('frames')\n",
+    " "
    ]
   },
   {
@@ -618,7 +651,7 @@
    "metadata": {},
    "source": [
     "## Closing, saving, and creating denoised version\n",
-    "### You can save an hdf5 file with all the fields of the cnmf object"
+    "### Save the results so we can use it later for correlation with the treadmill"
    ]
   },
   {
@@ -629,7 +662,7 @@
    "source": [
     "save_results = True\n",
     "if save_results:\n",
-    "    cnm2.save('analysis_results.hdf5')"
+    "    cnm2.save('/home/pbauer/DATA/analysis_results.hdf5')"
    ]
   },
   {
