--- a/labs/W0D6_2P_Analysis/W0D6_2P_CaIMan.ipynb
+++ b/labs/W0D6_2P_Analysis/W0D6_2P_CaIMan.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This notebook was originally written by Pat Gunn, Eftychios Pnevmatikakis, Johannes Friedrich, and Andrea Giovannucci from the CaImAn project:  https://github.com/flatironinstitute/CaImAn/blob/master/demos/notebooks/demo_pipeline.ipynb\n",
+    "\n",
+    "It was later edited by Pavol Bauer for the LINdoscope 2021 course http://www.lindoscope.com using also input from Oliver Barnstedt and Felix Kuhn.\n",
+    "\n",
+    "The full CaImAn documentation can be found here: \n",
+    "https://caiman.readthedocs.io/en/master/core_functions.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<html><head><meta content=\"text/html; charset=UTF-8\" http-equiv=\"content-type\"><style type=\"text/css\">ol</style></head><body class=\"c5\"><p class=\"c0 c4\"><span class=\"c3\"></span></p><p class=\"c2 title\" id=\"h.rrbabt268i6e\"><h1>CaImAn&rsquo;s Demo pipeline</h1></p><p class=\"c0\"><span class=\"c3\">This notebook will help to demonstrate the process of CaImAn and how it uses different functions to denoise, deconvolve and demix neurons from a two-photon Calcium Imaging dataset. The demo shows how to construct the `params`, `MotionCorrect` and `cnmf` objects and call the relevant functions. You can also run a large part of the pipeline with a single method (`cnmf.fit_file`). See inside for details.\n",
     "\n",
     "Dataset couresy of Sue Ann Koay and David Tank (Princeton University)\n",
@@ -49,7 +61,8 @@
     "from caiman.utils.utils import download_demo\n",
     "from caiman.utils.visualization import plot_contours, nb_view_patches, nb_plot_contour\n",
     "from caiman.base.movies import load\n",
-    "bpl.output_notebook()"
+    "bpl.output_notebook()\n",
+    "import napari"
    ]
   },
   {
@@ -87,7 +100,7 @@
    "outputs": [],
    "source": [
     "#fnames = ['/home/pbauer/DATA/LotusScan/20210819_EM0043_1.tiff']  # filename to be processed\n",
-    "fnames = ['/home/pbauer/DATA/LotusScan/Exported Images ch1 tiff_stack fiji.tiff']\n",
+    "fnames = ['/home/pbauer/DATA/LotusScan/Exported Images ch1 tiff_stack fiji2.tif']\n",
     "#if fnames[0] in ['Sue_2x_3000_40_-46.tif', 'demoMovie.tif']:\n",
     "#    fnames = [download_demo(fnames[0])]"
    ]
@@ -128,7 +141,7 @@
     "# DOWNSAMPLING RUN ONLY ONCE SINCE ORIGINAL TIFF WILL BE OVERWRITTEN!!\n",
     "cropping = (0, 0, 600, 600) #NO CROPPING\n",
     "sds_ratio = .5  # spatial downsampling  \n",
-    "tds_ratio = .5  # temporal downsampling\n",
+    "tds_ratio = 1  # DO NOT PERFORM temporal downsampling!\n",
     "\n",
     "for i, moviepath in tqdm(enumerate(fnames)):\n",
     "    movie = cm.load(moviepath)\n",
@@ -180,9 +193,10 @@
     "display_movie = True\n",
     "if display_movie:\n",
     "    m_orig = cm.load_movie_chain(fnames)\n",
-    "    ds_ratio = 0.2\n",
-    "    m_orig.resize(1, 1, ds_ratio).play(\n",
-    "        q_max=99.5, fr=30, magnification=2)"
+    "    #ds_ratio = 0.2\n",
+    "    #m_orig.resize(1, 1, ds_ratio).play(\n",
+    "    #    q_max=99.5, fr=30, magnification=2)\n",
+    "    viewer = napari.view_image(m_orig, colormap='viridis');"
    ]
   },
   {
@@ -209,7 +223,7 @@
    "outputs": [],
    "source": [
     "# dataset dependent parameters\n",
-    "fr = 20                             # imaging rate in frames per second\n",
+    "fr = 40                             # imaging rate in frames per second\n",
     "decay_time = 0.4                    # length of a typical transient in seconds\n",
     "\n",
     "# motion correction parameters\n",
@@ -378,14 +392,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%% compare with original movie\n",
-    "display_movie = True\n",
-    "if display_movie:\n",
-    "    m_orig = cm.load_movie_chain(fnames)\n",
-    "    ds_ratio = 0.2\n",
-    "    cm.concatenate([m_orig.resize(1, 1, ds_ratio) - mc.min_mov*mc.nonneg_movie,\n",
-    "                    m_els.resize(1, 1, ds_ratio)], \n",
-    "                   axis=2).play(fr=60, gain=15, magnification=2, offset=0)  # press q to exit"
+    "# view and compare motion correction\n",
+    "viewer = napari.Viewer()\n",
+    "vis_mc_nofilter = np.concatenate([m_orig- mc.min_mov*mc.nonneg_movie, m_els], 2)\n",
+    "new_layer = viewer.add_image(vis_mc_nofilter, colormap='viridis')"
    ]
   },
   {
@@ -694,18 +704,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cnm2.estimates.play_movie(images, q_max=99.9, gain_res=2,\n",
-    "                                  magnification=2,\n",
-    "                                  bpx=border_to_0,\n",
-    "                                  include_bck=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -722,6 +720,23 @@
     "denoised = cm.movie(cnm2.estimates.A.dot(cnm2.estimates.C) + \\\n",
     "                    cnm2.estimates.b.dot(cnm2.estimates.f)).reshape(dims + (-1,), order='F').transpose([2, 0, 1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "viewer = napari.Viewer()\n",
+    "new_layer = viewer.add_image(denoised, colormap='viridis')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
