--- a/DLC_Csilla.ipynb
+++ b/DLC_Csilla.ipynb
@@ -16,7 +16,7 @@
         "id": "RiDwIVf5-3H_"
       },
       "source": [
-        "This notebook is a modified copy of https://colab.research.google.com/github/DeepLabCut/DeepLabCut/blob/master/examples/COLAB/COLAB_DEMO_mouse_openfield.ipynb, originally written by Mackenzie Mathis. Publication: Mathis et al 2018, https://doi.org/10.1038/s41593-018-0209-y."
+        "This notebook is a modified copy of https://shorturl.at/AIKO3, originally written by Mackenzie Mathis. Publication: Mathis et al 2018, https://doi.org/10.1038/s41593-018-0209-y."
       ]
     },
     {
