--- a/notebooks/analysis_1p/lindoscope_1P_decoder.ipynb
+++ b/notebooks/analysis_1p/lindoscope_1P_decoder.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/obarnstedt/LINdoscope2023/blob/main/notebooks/analysis_1p/lindoscope_1P_decoder.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "b876a095",
       "metadata": {
         "id": "b876a095"
@@ -14,6 +24,19 @@
         "Logistic regressor:\n",
         "Models the probability of a behavior event taking place based on the independent variables, here the spike inferred activity obtained from Caiman analysis."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "Ys1c7t2cW1aR"
+      },
+      "id": "Ys1c7t2cW1aR",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -42,7 +65,7 @@
         }
       },
       "id": "pxgiZ2G1EcbI",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "a949d020",
       "metadata": {
         "id": "a949d020"
@@ -478,7 +501,8 @@
       "version": "3.10.9"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
