--- a/notebooks/analysis_1p/lindoscope_1P_decoder.ipynb
+++ b/notebooks/analysis_1p/lindoscope_1P_decoder.ipynb
@@ -113,6 +113,7 @@
       },
       "outputs": [],
       "source": [
+        "drive_path = '/content/drive' #Change this to point to where you have your sample data\n",
         "data_path = os.path.join(os.getcwd(), 'data')\n",
         "\n",
         "if not os.listdir(data_path):\n",
