--- a/notebooks/analysis_1p/lindoscope_1P_decoder.ipynb
+++ b/notebooks/analysis_1p/lindoscope_1P_decoder.ipynb
@@ -181,7 +181,7 @@
         "                         add_forward_jitter=True, forward=5, add_back_jitter=True, backward=5,\n",
         "                         fps=30, to_use='Regrouped Behaviors')\n",
         "\n",
-        "#Plot a ethogram for the behaviors\n",
+        "#Plot ethograms for the behaviors\n",
         "plot_design_matrix(design_matrix)"
       ]
     },
