--- a/notebooks/DLC_Colab_VideoAnalysis.ipynb
+++ b/notebooks/DLC_Colab_VideoAnalysis.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/alisabak/LINdoscope2023/blob/main/notebooks/DLC_Colab_VideoAnalysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/obarnstedt/LINdoscope2023/blob/main/notebooks/DLC_Colab_VideoAnalysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -97,6 +97,47 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3K9Ndy1beyfG"
+      },
+      "outputs": [],
+      "source": [
+        "import deeplabcut\n",
+        "deeplabcut.__version__"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Optional: shorten videos\n",
+        "Add below a path to a video you want to shorten. Enter the start and stop time for desired video length."
+      ],
+      "metadata": {
+        "id": "8Tw8DXi-TpJx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PLEASE EDIT THESE:\n",
+        "videofile_path = '/content/drive/MyDrive/MouseBody-Barnstedt-2019-09-09/videos/Basler_acA780-75gm_22611479_20190213_145358892.mp4'\n",
+        "\n",
+        "# Edit these if needed\n",
+        "start = '00:00:01' #hh:mm:ss\n",
+        "stop = '00:00:05' #hh:mm:ss\n",
+        "outpath = '/content/drive/MyDrive/MouseBody-Barnstedt-2019-09-09/videos/short' #path to where the shoertened videos will be saved. By default it is the same folder as the original files\n",
+        "\n",
+        "deeplabcut.ShortenVideo(videofile_path, start=start, stop=stop, outpath=outpath)"
+      ],
+      "metadata": {
+        "id": "EXohJHPdRfnu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Frnj1RVDyEqs"
@@ -115,8 +156,8 @@
       "outputs": [],
       "source": [
         "# PLEASE EDIT THESE:\n",
-        "PrertrainedModelFolderName = 'For LINdoscope test/top_transparent-Alisa-2023-02-08'\n",
-        "VideoFolderName = 'For LINdoscope test/videos'\n",
+        "PrertrainedModelFolderName = 'MouseFace-Barnstedt-2019-08-21'\n",
+        "VideoFolderName = 'MouseBody-Barnstedt-2019-09-09/videos/short'\n",
         "VideoType = 'mp4'\n",
         "\n",
         "#don't edit these:\n",
@@ -127,18 +168,6 @@
         "#No need to edit this, as you set it up before:\n",
         "path_config_file = '/content/drive/My Drive/'+PrertrainedModelFolderName+'/config.yaml'\n",
         "path_config_file"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "3K9Ndy1beyfG"
-      },
-      "outputs": [],
-      "source": [
-        "import deeplabcut\n",
-        "deeplabcut.__version__"
       ]
     },
     {
