--- a/notebooks/analysis_1p/lindoscope_1P_decoder.ipynb
+++ b/notebooks/analysis_1p/lindoscope_1P_decoder.ipynb
@@ -114,7 +114,7 @@
       "outputs": [],
       "source": [
         "drive_path = '/content/drive' #Change this to point to where you have your sample data\n",
-        "data_path = os.path.join(drive_path, 'data')\n",
+        "data_path = os.path.join(drive_path, 'data_1p_sample')\n",
         "\n",
         "if not os.listdir(data_path):\n",
         "    print(f'{data_path} is empty. Check if data has been downloaded and placed in the correct folder. Or check that file name and types')\n",
