Video trimming updated

--- a/notebooks/DLC_Colab_VideoAnalysis.ipynb
+++ b/notebooks/DLC_Colab_VideoAnalysis.ipynb
@@ -112,7 +112,7 @@
       "cell_type": "markdown",
       "source": [
         "## Optional: shorten videos\n",
-        "Add below a path to a video you want to shorten. Enter the start and stop time for desired video length."
+        "Add below a path to a video you want to shorten. Enter length of a desired video."
       ],
       "metadata": {
         "id": "8Tw8DXi-TpJx"
@@ -122,17 +122,66 @@
       "cell_type": "code",
       "source": [
         "# PLEASE EDIT THESE:\n",
-        "videofile_path = '/content/drive/MyDrive/MouseBody-Barnstedt-2019-09-09/videos/Basler_acA780-75gm_22611479_20190213_145358892.mp4'\n",
+        "videofile_path = 'MouseBody-Barnstedt-2019-09-09/videos/Copy of Basler acA780-75gm (22611479)_20190213_145358892.mp4'\n",
+        "length = 60 #in seconds\n",
         "\n",
         "# Edit these if needed\n",
-        "start = '00:00:01' #hh:mm:ss\n",
-        "stop = '00:00:05' #hh:mm:ss\n",
-        "outpath = '/content/drive/MyDrive/MouseBody-Barnstedt-2019-09-09/videos/short' #path to where the shoertened videos will be saved. By default it is the same folder as the original files\n",
+        "framerate = 75\n",
+        "outsuffix = '_short'\n",
         "\n",
-        "deeplabcut.ShortenVideo(videofile_path, start=start, stop=stop, outpath=outpath)"
+        "# Do not edit these\n",
+        "videofile_path = '/content/drive/My Drive/' + videofile_path\n",
+        "outpath = videofile_path.replace('.mp4', outsuffix+'.mp4')"
       ],
       "metadata": {
         "id": "EXohJHPdRfnu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def trim_video(path_in, path_out, stop_frame, start_frame=0):\n",
+        "  import cv2\n",
+        "  from tqdm import tqdm\n",
+        "  cap = cv2.VideoCapture(path_in)\n",
+        "  cap.set(1, start_frame)\n",
+        "  frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+        "  frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+        "  fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
+        "  vid_trimmed = cv2.VideoWriter(path_out, cv2.VideoWriter_fourcc(*\"mp4v\"),\n",
+        "                                fps, (frame_width, frame_height))\n",
+        "  vidlength = stop_frame - start_frame\n",
+        "  i = start_frame\n",
+        "\n",
+        "  print('Trimming video...')\n",
+        "  with tqdm(total=vidlength) as pbar:\n",
+        "      while cap.isOpened():\n",
+        "          _, current_frame = cap.read()\n",
+        "          if current_frame is None or i>=stop_frame:\n",
+        "              break\n",
+        "          vid_trimmed.write(current_frame)\n",
+        "          pbar.update(1)\n",
+        "          i+=1\n",
+        "  cap.release()\n",
+        "  vid_trimmed.release()\n",
+        "\n",
+        "  return path_out"
+      ],
+      "metadata": {
+        "id": "LFUnN3AExpvp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  trim_video(videofile_path, outpath, framerate*length)"
+      ],
+      "metadata": {
+        "id": "SbvTZ5IPz8po"
       },
       "execution_count": null,
       "outputs": []
