--- a/place_cell_analysis.ipynb
+++ b/place_cell_analysis.ipynb
@@ -183,8 +183,8 @@
       "source": [
         "filepath = '/content/drive/MyDrive/LINdoscope2023_analysis/sample_data/2P_dCA1_treadmill/calcium_behaviour.h5'\n",
         "\n",
-        "behaviour_calcium = pd.read_hdf(filepath)\n",
-        "calcium = np.load('/content/drive/MyDrive/calcium_signal_S.npy')\n",
+        "behaviour_calcium = pd.read_hdf(filepath) # behavioural signal synched\n",
+        "calcium = np.load('/content/drive/MyDrive/LINdoscope2023_analysis/sample_data/2P_dCA1_treadmill/calcium_signal_S.npy') # calcium signal synched\n",
         "\n",
         "\n"
       ]
@@ -1516,7 +1516,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLJQHA21M4ON6Q12igPAuH",
+      "authorship_tag": "ABX9TyPum7cGpdI4V6bQdRclYvPQ",
       "include_colab_link": true
     },
     "kernelspec": {
