Added some more descriptions

--- a/notebooks/place_cell_analysis.ipynb
+++ b/notebooks/place_cell_analysis.ipynb
@@ -957,11 +957,15 @@
       "source": [
         "#Let's compare the speed and position tuning of single cells:\n",
         "\n",
-        "Investigate the cells by changin their indices with the slider. Many place cells also show significant speed tuning. In these cases Do you think it is rather a place tuned cell, a speed tuned cell, or a cell tuned by both behavioural parameters? Keep in mind that we also have even more behavioural parameters that cells could code for and that sometimes they might not neccessarily code for one variable only but jointly for multiple ones.\n",
+        "Investigate the cells by changin their indices with the slider. Many cells that are place tuned also show significant speed tuning. In these cases -do you think it is rather a place cell, a speed cell, or a cell tuned by both behavioural parameters? Keep in mind that we also have even more behavioural parameters that cells could code for, such as reward, licking etc and that neurons might not neccessarily code for one variable only but jointly for multiple ones.\n",
         "\n",
-        "One way to deal with this is by regressing out behavioural variables. For example with models which inherently regresses out the effects of one included predictor variable from the neuron's activity and allow to examine the residuals to determine whether there is any predictive power remaining with a specific second variable. Note however, that highly correlated predictors require more advanced methods.\n",
+        "One way to deal with this is by using tools such as Generalized Linear Models. Such tools inherently regresses out the effects of one included predictor variable (e.g. velocity) from the neuron's activity and allow to examine the residuals to determine whether there is any predictive power remaining with a specific second variable (e.g. position). However note that in cases where there is a very high colinearity between variables, statistically even more advanced methods will be needed.\n",
         "\n",
-        "To invesigate if neurons are coding for combinations of behaviourally relevant variables, this can be investigated using dimensionality reduction methods. See e.g. Nieh et al., (Nature, 2021). Note bothe the encoding properties of neurons as well as your choice of analysis always depend highly on the task at hand.\n",
+        "If your objective is thus to clearly investigate speed tuned cells only, or e.g. reward tuned cells only, the best way would be to change your experimental design such that you decouple reward or speed from position. E.g. by shifting the reward zones of the animal etc.\n",
+        "\n",
+        "To invesigate if neurons are coding for combinations of behaviourally relevant variables, we can use dimensionality reduction methods. See e.g. Nieh et al., (Nature, 2021).\n",
+        "\n",
+        "Note that both the encoding properties of neurons as well as your choice of analysis always depend highly on the task at hand.\n",
         "\n"
       ],
       "metadata": {
@@ -1067,19 +1071,12 @@
       "source": [
         "# BONUS: Calculate the place cells' placefield and firing reliability\n",
         "\n",
-        "Place fields are obtained\n",
-        "by replicating the binned_signal trace by a factor of 3 to account for circularity of the belt. Then we apply a Savitzky-Golay filter to account for skewed place field activity (here we use window_length of 8. Note that the bigger the window_length, the 'smoother' the signal).\n",
+        "Here, we obtain place fields by replicating the binned_signal trace by a factor of 3 to account for circularity of the belt. Then we apply a Savitzky-Golay filter to account for skewed place field activity (here we use window_length of 8. Note that the bigger the window_length, the 'smoother' the signal). The more classical way would just be to use a Gaussian filter for smoothing which doesn't consider the \"skewing\" of PFs however.\n",
         "\n",
-        "The resulting filtered spatial calcium activity is then searched for peaks using Scipy’s find_peaks function (min width: numBins/20;\n",
-        "relative height: 0.7, min peak distance =numBins/20)\n",
+        "The resulting filtered spatial calcium activity is then searched for peaks using Scipy’s find_peaks function. In this function you can adjust characteristics of your peaks to account for a place field. (Here: min width: numBins/20; relative height: 0.7;  min peak distance = numBins/20)\n",
         "\n",
-        "The left/right interpolated intersection points are defined as place field beginning/end. All these values are given by scipy's find_peaks function.\n",
-        "\n",
-        "We can then calculate the reliability of place cells in the next step, i.e. in how many laps the mean inside the palce fields was higher than outside the place fields.\n",
-        "\n",
-        "**But caution!**\n",
-        "Keep in mind the valocity tuning argument from above.\n",
-        "Also note also that there might be plasticity effects of PCs changing their place fields to another location or developing a place field later! In order to account for this, one could use sliding windows and calculate the stability in the sliding windows - However, for now let's assume place fields should be relatively stable across laps, since the animal is not learning a spatial representation any more during the recording, but has learned it before already."
+        "The left/right interpolated intersection points are defined as place field beginning/end.\n",
+        "\n"
       ],
       "metadata": {
         "id": "sye_ZbXp_WT2"
@@ -1191,7 +1188,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let's calculate the number of laps whose scaled mean activity is at least 1.5 times higher inside of the place fields compared to the overall scaled mean activity outside the place fields."
+        "We can now calculate the reliability of place fields in the next step, i.e. in how many laps the mean inside the palce fields was at least 1.5 times higher than outside the place fields. We can define cells that have a percentage of laps where this is true as 'reliable'.\n",
+        "\n",
+        "**But caution!**\n",
+        "Keep in mind the valocity tuning argument from above.\n",
+        "Also note also that there might be **plasticity effects** of PCs changing their place fields to another location or developing a place field later! In order to account for this, one could use sliding windows and calculate the stability in the sliding windows - However, for now let's assume place fields should be relatively stable across laps, since the animal is not learning a spatial representation any more during the recording, but has learned it before already."
       ],
       "metadata": {
         "id": "r6u_jd4IJyTt"
@@ -1342,7 +1343,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPX4h239i4nx7brJyQsW3p",
+      "authorship_tag": "ABX9TyO7Zl0E1XukSWVlAZK/1Ccg",
       "include_colab_link": true
     },
     "kernelspec": {
